manifests/default-backend/http_redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gateway
    namespace: shared-gateway
    sectionName: http
  hostnames:
  - "k8s.nhlabs.org"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 302
        port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
