manifests/default-backend/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
spec:
  parentRefs:
  - name: shared-gateway
    namespace: shared-gateway
    sectionName: https
  hostnames:
  - "k8s.nhlabs.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
          method: GET
      backendRefs:
        - name: nginx-service
          port: 80
